# mcga-proc

./: CMakeLists.txt
include/mcga/: proc.hpp
include/mcga/proc/: buffered_writer.hpp  message.hpp  pipe.hpp  pipe_posix.hpp  serialization.hpp  serialization_std.hpp  subprocess.hpp  subprocess_posix.hpp  worker_subprocess.hpp
src/: message.cpp  pipe.cpp  pipe_posix.cpp  subprocess_posix.cpp  worker_subprocess.cpp
tests/: message_test.cpp  pipe_test.cpp  subprocess_test.cpp  worker_subprocess_test.cpp
